@@ -173,7 +173,7 @@
 			</RegExp>
 			<!--Get genres from imdb.com-->
 			<RegExp input="$$1" output="&lt;genre&gt;\1&lt;/genre&gt;" dest="5+">
-				<expression>"/Sections/Genres/[^/]*/"&gt;([^&lt;]*)&lt;/a&gt;</expression>
+				<expression repeat="yes">&quot;/Sections/Genres/[^/]*/&quot;&gt;([^&lt;]*)&lt;/a&gt;</expression>
 			</RegExp>
 			<!--Get studio from imdb.com-->
 			<RegExp input="$$1" output="&lt;studio&gt;\1&lt;/studio&gt;" dest="5+">
