@@ -1,3 +1,15 @@
+[B]1.0.7[/B]
+Fixed: scraping directors from imdb when fullcast enabled
+
+[B]1.0.6[/B]
+Added: originaltitle tag if Hungarian is the preferred language
+
+[B]1.0.5[/B]
+Changed: chain scraper library functions
+
+[B]1.0.4[/B]
+Fixed: MPAA scraping from IMDb
+
 [B]1.0.3[/B]
 Added: NfUrl for looking at port.hu URL in the nfo
 Changed: use hdtrailersnet scraper library via chain function
